// Copyright 2015 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

option java_multiple_files = true;
option java_package = "proto";
option java_outer_classname = "BackupServerProto";
option objc_class_prefix = "BS";

package proto;

// The greeting service definition.
service BackupServer {
  // Sends a greeting
  rpc BackupFile(BackupFileRequest) returns (BackupFileReply) {}
  rpc GetBackup(GetBackupRequest) returns (GetBackupReply){}
}

message GetBackupRequest{
  string uid = 1;
}

message GetBackupReply {
  bytes file = 1;
}

message BackupFileRequest{
  bytes file = 1;
  string uid = 2;
}

message BackupFileReply{
  bool ok = 1;
}




